--- a/Swift tutorial part 1/Base.lproj/Main.storyboard
+++ b/Swift tutorial part 1/Base.lproj/Main.storyboard
@@ -34,27 +34,40 @@
                                     <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OHU-pC-yNr"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2S8-Qs-q8b">
-                                <rect key="frame" x="143" y="246" width="88" height="30"/>
-                                <state key="normal" title="Tap for Cool!">
-                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
-                                </state>
-                                <connections>
-                                    <action selector="coolButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UaN-1v-8xL"/>
-                                </connections>
-                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FF9-rc-9NO">
+                                <rect key="frame" x="137.5" y="221" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="gzB-bF-SIe"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3FU-3H-Wig">
+                                <rect key="frame" x="137.5" y="279" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="teS-uK-nBL"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="FF9-rc-9NO" firstAttribute="top" secondItem="gux-B1-ycC" secondAttribute="bottom" constant="40.5" id="0vj-v0-XaD"/>
                             <constraint firstItem="gux-B1-ycC" firstAttribute="top" secondItem="O5n-cd-r5P" secondAttribute="bottom" constant="60" id="6qd-CV-3Gv"/>
+                            <constraint firstItem="3FU-3H-Wig" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GDy-sN-uxf"/>
                             <constraint firstItem="gux-B1-ycC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="M5i-pk-SfQ"/>
                             <constraint firstItem="O5n-cd-r5P" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="N9Z-cl-awl"/>
+                            <constraint firstItem="3FU-3H-Wig" firstAttribute="top" secondItem="FF9-rc-9NO" secondAttribute="bottom" constant="28" id="Nt3-N4-YJ5"/>
                             <constraint firstItem="O5n-cd-r5P" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="50" id="aBA-qu-q73"/>
-                            <constraint firstItem="2S8-Qs-q8b" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fg7-rg-Kmf"/>
-                            <constraint firstItem="2S8-Qs-q8b" firstAttribute="top" secondItem="gux-B1-ycC" secondAttribute="bottom" constant="65.5" id="pda-OM-QLI"/>
+                            <constraint firstItem="FF9-rc-9NO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bMC-Xi-deS"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="text1" destination="FF9-rc-9NO" id="fVx-v1-ecu"/>
+                        <outlet property="text2" destination="3FU-3H-Wig" id="jDv-eO-4af"/>
                         <outlet property="theLabel" destination="O5n-cd-r5P" id="avn-Au-68o"/>
                     </connections>
                 </viewController>
